Fix Guest Mode errors in MD Settings by using the incognito context.

BUG=654588

Review-Url: https://codereview.chromium.org/2499093002
Cr-Commit-Position: refs/heads/master@{#432544}