chrome/browser/extensions/api/settings_private/settings_private_delegate_factory.h
@@ -35,6 +35,8 @@ class SettingsPrivateDelegateFactory
   // BrowserContextKeyedBaseFactory implementation.
   KeyedService* BuildServiceInstanceFor(
       content::BrowserContext* profile) const override;
+  content::BrowserContext* GetBrowserContextToUse(
+    content::BrowserContext* context) const override;
 
   DISALLOW_COPY_AND_ASSIGN(SettingsPrivateDelegateFactory);
 };
